# gist-id

./: Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: deploy-edge.yml  release-builder.yml  www.yml
crates/builder/: Cargo.toml
crates/builder/src/: keygen.rs  main.rs
crates/builder/src/importer/: linkedin.rs  mod.rs  writers.rs
crates/builder/src/parse/: education.rs  meta.rs  mod.rs  patents.rs  posts.rs  profile.rs  projects.rs  skills.rs  work.rs
crates/builder/src/verify/: github.rs  matcher.rs  mod.rs
crates/edge/: Cargo.toml  wrangler.toml
crates/edge/src/: css.rs  lib.rs  resolve.rs  seo.rs  view.rs
crates/schema/: Cargo.toml
crates/schema/src/: ast.rs  lib.rs  parse.rs  render.rs  verified.rs
docs/: layout.md
www/: index.html
