[workspace]
resolver = "2"
members = [
    "crates/schema",
    "crates/builder",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["gist.id contributors"]
repository = "https://github.com/gist-id/gist-id"
homepage = "https://gist.id"

[workspace.dependencies]
gist-id-schema = { path = "crates/schema", version = "0.1.0" }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Markdown parsing
pulldown-cmark = "0.13"

# Signing
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Errors
anyhow = "1"
thiserror = "2"

# Dates
chrono = { version = "0.4", features = ["serde", "clock"] }

# Archive handling
csv = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
