[package]
name = "gist-id-builder"
version = "0.4.0"
description = "Builds gist.id profile artefacts from a markdown source repository"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "gist-id"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
gist-id-schema = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
pulldown-cmark = { workspace = true }
ed25519-dalek = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
rand_core = "0.10"
getrandom = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
