[package]
name = "gist-id-edge"
version = "0.1.0"
description = "Cloudflare Worker that renders gist.id profiles"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
gist-id-schema = { workspace = true }
postcard = { workspace = true }
worker = "0.8"
leptos = { version = "0.8", default-features = false, features = ["ssr"] }
